package school.coda.jn_charlie_clemence.bataillejavale.logique.models;

public enum Orientation {
    HORIZONTAL,
    VERTICAL
}
